--- a/package.json
+++ b/package.json
@@ -17,53 +17,55 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/next": "15.8.5",
-    "@portabletext/react": "^2.0.2",
-    "@sanity/client": "^5.4.0",
-    "@sanity/code-input": "^4.1.0",
+    "@nx/next": "16.3.2",
+    "@portabletext/react": "^3.0.2",
+    "@sanity/client": "^5.4.2",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.8.1",
-    "@storybook/core-server": "6.5.16",
-    "@vercel/analytics": "^0.1.11",
-    "autoprefixer": "10.4.13",
+    "@sanity/vision": "^3.12.1",
+    "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
-    "core-js": "^3.29.0",
-    "groq": "^3.6.0",
-    "next": "13.1.1",
+    "core-js": "^3.31.0",
+    "groq": "^3.12.1",
+    "next": "13.3.0",
     "next-seo": "^5.15.0",
-    "postcss": "8.4.20",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "regenerator-runtime": "0.13.11",
-    "sanity": "^3.8.1",
-    "storybook-addon-next-router": "^3.1.1",
+    "sanity": "^3.12.1",
     "styled-components": "5.3.8",
-    "tailwindcss": "3.2.7",
-    "tslib": "^2.5.0"
+    "tailwindcss": "3.3.2",
+    "tslib": "^2.5.3"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.8.5",
-    "@nrwl/devkit": "15.8.5",
-    "@nrwl/eslint-plugin-nx": "15.8.5",
-    "@nrwl/jest": "15.8.5",
-    "@nrwl/js": "15.8.5",
-    "@nrwl/linter": "15.8.5",
-    "@nrwl/react": "15.8.5",
-    "@nrwl/storybook": "15.8.5",
-    "@nrwl/web": "15.8.5",
-    "@nrwl/webpack": "15.8.5",
-    "@nrwl/workspace": "15.8.5",
+    "@nx/devkit": "16.3.2",
+    "@nx/eslint-plugin": "16.3.2",
+    "@nx/jest": "16.3.2",
+    "@nx/js": "16.3.2",
+    "@nx/linter": "16.3.2",
+    "@nx/plugin": "16.3.2",
+    "@nx/react": "16.3.2",
+    "@nx/storybook": "16.3.2",
+    "@nx/web": "16.3.2",
+    "@nx/webpack": "16.3.2",
+    "@nx/workspace": "16.3.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@sanity/cli": "^3.6.0",
-    "@storybook/addon-backgrounds": "^6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
-    "@storybook/react": "6.5.16",
-    "@svgr/webpack": "^5.4.0",
-    "@swc/core": "^1.3.39",
-    "@swc/jest": "^0.2.24",
+    "@portabletext/types": "^2.0.2",
+    "@sanity/cli": "^3.12.1",
+    "@storybook/addon-backgrounds": "^7.0.21",
+    "@storybook/addon-essentials": "7.0.21",
+    "@storybook/core-server": "7.0.21",
+    "@storybook/nextjs": "^7.0.21",
+    "@storybook/react": "7.0.21",
+    "@storybook/react-vite": "7.0.21",
+    "@svgr/webpack": "8.0.1",
+    "@swc-node/register": "~1.4.2",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.64",
+    "@swc/helpers": "~0.5.1",
+    "@swc/jest": "^0.2.26",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.4.0",
@@ -71,9 +73,10 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.54.1",
-    "@typescript-eslint/parser": "5.54.1",
-    "@vitejs/plugin-react-swc": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "10.4.14",
     "eslint": "8.15.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
@@ -81,20 +84,24 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "husky": ">=8.0.3",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
-    "lint-staged": ">=13.1.2",
-    "nx": "15.8.5",
-    "prettier": "2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "react-test-renderer": "18.2.0",
-    "storybook-addon-swc": "^1.1.9",
-    "ts-jest": "^29.0.5",
-    "typescript": "4.9.5",
-    "url-loader": "^3.0.0",
-    "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.7"
+    "jsonc-eslint-parser": "^2.3.0",
+    "lint-staged": "^13.2.2",
+    "nx": "16.3.2",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "postcss": "8.4.24",
+    "storybook": "7.0.21",
+    "storybook-addon-swc": "^1.2.0",
+    "ts-jest": "29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.4",
+    "url-loader": "^4.1.1",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
