--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nx/next": "16.3.2",
     "@portabletext/react": "^3.0.2",
     "@sanity/client": "^5.4.2",
     "@sanity/code-input": "^4.1.1",
@@ -40,17 +39,17 @@
     "tslib": "^2.5.3"
   },
   "devDependencies": {
-    "@nx/devkit": "16.3.2",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/js": "16.3.2",
-    "@nx/linter": "16.3.2",
-    "@nx/plugin": "16.3.2",
-    "@nx/react": "16.3.2",
-    "@nx/storybook": "16.3.2",
-    "@nx/vite": "^16.3.2",
-    "@nx/web": "16.3.2",
-    "@nx/webpack": "16.3.2",
-    "@nx/workspace": "16.3.2",
+    "@nx/devkit": "16.4.0",
+    "@nx/eslint-plugin": "16.4.0",
+    "@nx/js": "16.4.0",
+    "@nx/linter": "16.4.0",
+    "@nx/plugin": "16.4.0",
+    "@nx/react": "16.4.0",
+    "@nx/storybook": "16.4.0",
+    "@nx/vite": "16.4.0",
+    "@nx/web": "16.4.0",
+    "@nx/webpack": "16.4.0",
+    "@nx/workspace": "16.4.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@portabletext/types": "^2.0.2",
     "@sanity/cli": "^3.12.1",
@@ -68,14 +67,14 @@
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "5.59.11",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "@vitest/coverage-c8": "^0.31.0",
-    "@vitest/ui": "^0.31.0",
+    "@vitejs/plugin-react-swc": "3.3.2",
+    "@vitest/coverage-c8": "0.32.2",
+    "@vitest/ui": "0.32.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.15.0",
     "eslint-config-next": "13.1.1",
@@ -86,22 +85,23 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": ">=8.0.3",
-    "jsdom": "~20.0.3",
+    "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.3.0",
     "lint-staged": "^13.2.2",
-    "nx": "16.3.2",
+    "nx": "16.4.0",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "storybook": "7.0.21",
     "storybook-addon-swc": "^1.2.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4",
+    "typescript": "5.1.3",
     "url-loader": "^4.1.1",
-    "vite": "^4.3.9",
+    "vite": "4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.31.0"
+    "vitest": "0.32.2",
+    "@nx/next": "16.4.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
