--- a/package.json
+++ b/package.json
@@ -17,66 +17,67 @@
   },
   "private": true,
   "dependencies": {
-    "@portabletext/react": "^3.0.2",
+    "@portabletext/react": "^3.0.7",
     "@sanity/client": "^5.4.2",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.12.1",
-    "@vercel/analytics": "^1.0.1",
+    "@sanity/vision": "^3.16.4",
+    "@vercel/analytics": "^1.0.2",
     "classnames": "^2.3.2",
     "core-js": "^3.31.0",
-    "groq": "^3.12.1",
+    "groq": "^3.16.4",
     "next": "13.3.0",
     "next-seo": "^5.15.0",
-    "prism-react-renderer": "^2.0.5",
+    "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.11.0",
     "regenerator-runtime": "0.13.11",
-    "sanity": "^3.12.1",
+    "sanity": "^3.16.4",
     "styled-components": "5.3.8",
     "tailwindcss": "3.3.2",
     "tslib": "^2.5.3"
   },
   "devDependencies": {
-    "@nx/devkit": "16.4.0",
-    "@nx/eslint-plugin": "16.4.0",
-    "@nx/js": "16.4.0",
-    "@nx/linter": "16.4.0",
-    "@nx/plugin": "16.4.0",
-    "@nx/react": "16.4.0",
-    "@nx/storybook": "16.4.0",
-    "@nx/vite": "16.4.0",
-    "@nx/web": "16.4.0",
-    "@nx/webpack": "16.4.0",
-    "@nx/workspace": "16.4.0",
+    "@nx/devkit": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/linter": "16.8.1",
+    "@nx/next": "16.8.1",
+    "@nx/plugin": "16.8.1",
+    "@nx/react": "16.8.1",
+    "@nx/storybook": "16.8.1",
+    "@nx/vite": "16.8.1",
+    "@nx/web": "16.8.1",
+    "@nx/webpack": "16.8.1",
+    "@nx/workspace": "16.8.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@portabletext/types": "^2.0.2",
-    "@sanity/cli": "^3.12.1",
-    "@storybook/addon-backgrounds": "^7.0.21",
-    "@storybook/addon-essentials": "7.0.21",
-    "@storybook/core-server": "7.0.21",
+    "@portabletext/types": "^2.0.6",
+    "@sanity/cli": "^3.16.4",
+    "@storybook/addon-backgrounds": "7.4.1",
+    "@storybook/addon-essentials": "7.4.1",
+    "@storybook/core-server": "7.4.1",
     "@storybook/nextjs": "^7.0.21",
-    "@storybook/react": "7.0.21",
-    "@storybook/react-vite": "7.0.21",
+    "@storybook/react": "7.4.1",
+    "@storybook/react-vite": "7.4.1",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.64",
     "@swc/helpers": "~0.5.1",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
-    "@types/react": "18.2.13",
+    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "@vitest/coverage-c8": "0.32.2",
     "@vitest/ui": "0.32.2",
     "autoprefixer": "10.4.14",
-    "eslint": "8.15.0",
+    "eslint": "8.46.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
@@ -87,8 +88,8 @@
     "husky": ">=8.0.3",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.3.0",
-    "lint-staged": "^13.2.2",
-    "nx": "16.4.0",
+    "lint-staged": "^13.3.0",
+    "nx": "16.8.1",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
@@ -100,8 +101,7 @@
     "vite": "4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "0.32.2",
-    "@nx/next": "16.4.0"
+    "vitest": "0.32.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
