--- a/package.json
+++ b/package.json
@@ -39,18 +39,18 @@
     "tslib": "^2.5.3"
   },
   "devDependencies": {
-    "@nx/devkit": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/next": "16.8.1",
-    "@nx/plugin": "16.8.1",
-    "@nx/react": "16.8.1",
-    "@nx/storybook": "16.8.1",
-    "@nx/vite": "16.8.1",
-    "@nx/web": "16.8.1",
-    "@nx/webpack": "16.8.1",
-    "@nx/workspace": "16.8.1",
+    "@nx/devkit": "16.9.1",
+    "@nx/eslint-plugin": "16.9.1",
+    "@nx/js": "16.9.1",
+    "@nx/linter": "16.9.1",
+    "@nx/next": "16.9.1",
+    "@nx/plugin": "16.9.1",
+    "@nx/react": "16.9.1",
+    "@nx/storybook": "16.9.1",
+    "@nx/vite": "16.9.1",
+    "@nx/web": "16.9.1",
+    "@nx/webpack": "16.9.1",
+    "@nx/workspace": "16.9.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@portabletext/types": "^2.0.6",
     "@sanity/cli": "^3.16.4",
@@ -63,8 +63,8 @@
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.64",
-    "@swc/helpers": "~0.5.1",
+    "@swc/core": "1.3.91",
+    "@swc/helpers": "0.5.2",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
@@ -89,7 +89,7 @@
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.3.0",
     "lint-staged": "^13.3.0",
-    "nx": "16.8.1",
+    "nx": "16.9.1",
     "postcss": "8.4.29",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
