--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"],
+  "packageRules": [
+    {
+      "packagePatterns": ["^@nx/", "^@swc/", "^storybook", "^@storybook/"],
+      "enabled": false
+    }
+  ],
+  "ignoreDeps": ["nx", "react", "react-dom", "next"]
 }
