--- a/package.json
+++ b/package.json
@@ -39,27 +39,26 @@
     "tslib": "2.6.2"
   },
   "devDependencies": {
-    "@nx/devkit": "16.9.1",
-    "@nx/eslint-plugin": "16.9.1",
-    "@nx/js": "16.9.1",
-    "@nx/linter": "16.9.1",
-    "@nx/next": "16.9.1",
-    "@nx/plugin": "16.9.1",
-    "@nx/react": "16.9.1",
-    "@nx/storybook": "16.9.1",
-    "@nx/vite": "16.9.1",
-    "@nx/web": "16.9.1",
-    "@nx/webpack": "16.9.1",
-    "@nx/workspace": "16.9.1",
+    "@nx/devkit": "17.0.2",
+    "@nx/eslint-plugin": "17.0.2",
+    "@nx/js": "17.0.2",
+    "@nx/next": "17.0.2",
+    "@nx/plugin": "17.0.2",
+    "@nx/react": "17.0.2",
+    "@nx/storybook": "17.0.2",
+    "@nx/vite": "17.0.2",
+    "@nx/web": "17.0.2",
+    "@nx/webpack": "17.0.2",
+    "@nx/workspace": "17.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
     "@portabletext/types": "2.0.8",
     "@sanity/cli": "3.18.1",
-    "@storybook/addon-backgrounds": "7.4.1",
-    "@storybook/addon-essentials": "7.4.1",
-    "@storybook/core-server": "7.4.1",
+    "@storybook/addon-backgrounds": "7.5.2",
+    "@storybook/addon-essentials": "7.5.2",
+    "@storybook/core-server": "7.5.2",
     "@storybook/nextjs": "^7.0.21",
-    "@storybook/react": "7.4.1",
-    "@storybook/react-vite": "7.4.1",
+    "@storybook/react": "7.5.2",
+    "@storybook/react-vite": "7.5.2",
     "@svgr/webpack": "8.1.0",
     "@swc-node/register": "1.6.8",
     "@swc/cli": "~0.1.62",
@@ -68,8 +67,8 @@
     "@tailwindcss/typography": "0.5.10",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.18.6",
-    "@types/react": "18.2.31",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
     "@types/styled-components": "5.1.29",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -89,7 +88,7 @@
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "2.3.0",
     "lint-staged": "15.0.2",
-    "nx": "16.9.1",
+    "nx": "17.0.2",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
@@ -101,7 +100,8 @@
     "vite": "4.5.0",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.2.1",
-    "vitest": "0.34.6"
+    "vitest": "0.34.6",
+    "@nx/eslint": "17.0.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
