--- a/renovate.json
+++ b/renovate.json
@@ -4,16 +4,25 @@
   "rebaseWhen": "behind-base-branch",
   "packageRules": [
     {
-      "packagePatterns": ["^@nx/", "^@swc/", "^storybook", "^@storybook/", "^@typescript-eslint/", "^@eslint/"],
+      "packagePatterns": ["^@swc/", "^storybook", "^@storybook/", "^@typescript-eslint/", "^@eslint/"],
       "enabled": false
     },
     { "labels": ["📦 deps", "🤖 bot"], "matchPackagePatterns": ["*"] },
     {
       "labels": ["⚠️ major", "📦 deps", "🤖 bot"],
       "matchUpdateTypes": ["major"]
+    },
+    {
+      "packageNames": ["@nrwl/workspace"],
+      "packagePatterns": ["^@nrwl/", "nx", "^@nx/"],
+      "groupName": "NX workspace",
+      "postUpgradeTasks": {
+        "commands": ["npx nx migrate latest", "npx nx migrate --run-migrations"],
+        "fileFilters": ["**/**"]
+      }
     }
   ],
-  "ignoreDeps": ["nx", "react", "react-dom", "next", "@types/react", "@types/react-dom", "eslint"],
+  "ignoreDeps": ["react", "react-dom", "next", "@types/react", "@types/react-dom", "eslint"],
   "rangeStrategy": "pin",
   "prConcurrentLimit": 5
 }
