--- a/nx.json
+++ b/nx.json
@@ -35,10 +35,6 @@
       "inputs": ["production", "^production"],
       "cache": true
     },
-    "test": {
-      "inputs": ["default", "^production"],
-      "cache": true
-    },
     "lint": {
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/eslint.config.js"],
       "cache": true
@@ -53,7 +49,8 @@
       ],
       "cache": true
     },
-    "e2e": {
+    "@nx/vite:test": {
+      "inputs": ["default", "^production"],
       "cache": true
     }
   },
