--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.21.3",
     "@vercel/analytics": "1.1.1",
+    "@vercel/speed-insights": "1.0.1",
     "classnames": "2.3.2",
     "core-js": "3.34.0",
     "groq": "3.21.3",
