--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
     "build:sanity": "nx run sanity:build && nx run sanity:deploy-graphql",
-    "test": "nx affected --base=origin/main --target=test",
+    "test": "nx affected --base=origin/main --target=test --reporter=verbose",
     "tsc": "tsc",
     "type-check": "nx run-many --target type-check --all",
     "lint": "nx affected --base=origin/main --target=lint",
