--- a/package.json
+++ b/package.json
@@ -103,5 +103,9 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
+  },
+  "packageManager": "pnpm@8.15.7",
+  "engines": {
+    "pnpm": ">=8"
   }
 }
