--- a/package.json
+++ b/package.json
@@ -40,20 +40,17 @@
     "tslib": "2.6.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "2.1.2",
-    "@eslint/js": "8.46.0",
-    "@nx/devkit": "17.3.1",
-    "@nx/eslint": "17.3.1",
-    "@nx/eslint-plugin": "17.3.1",
-    "@nx/js": "17.3.1",
-    "@nx/next": "17.3.1",
-    "@nx/plugin": "17.3.1",
-    "@nx/react": "17.3.1",
-    "@nx/storybook": "17.3.1",
-    "@nx/vite": "17.3.1",
-    "@nx/web": "17.3.1",
-    "@nx/webpack": "17.3.1",
-    "@nx/workspace": "17.3.1",
+    "@eslint/eslintrc": "2.1.4",
+    "@eslint/js": "8.57.0",
+    "@nx/eslint": "18.3.4",
+    "@nx/eslint-plugin": "18.3.4",
+    "@nx/js": "18.3.4",
+    "@nx/next": "18.3.4",
+    "@nx/react": "18.3.4",
+    "@nx/storybook": "18.3.4",
+    "@nx/vite": "18.3.4",
+    "@nx/web": "18.3.4",
+    "@nx/workspace": "18.3.4",
     "@portabletext/types": "2.0.13",
     "@sanity/cli": "3.39.1",
     "@storybook/addon-backgrounds": "7.6.4",
@@ -62,7 +59,7 @@
     "@storybook/nextjs": "7.6.4",
     "@storybook/react": "7.6.3",
     "@svgr/webpack": "8.1.0",
-    "@swc-node/register": "1.9.0",
+    "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.91",
     "@swc/helpers": "0.5.2",
@@ -71,13 +68,13 @@
     "@types/node": "18.19.31",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
+    "@typescript-eslint/eslint-plugin": "7.7.0",
+    "@typescript-eslint/parser": "7.7.0",
     "@vitejs/plugin-react-swc": "3.6.0",
     "@vitest/coverage-v8": "1.5.2",
     "@vitest/ui": "1.5.2",
     "autoprefixer": "10.4.19",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
@@ -88,7 +85,7 @@
     "husky": "9.0.11",
     "jsdom": "24.0.0",
     "lint-staged": "15.2.2",
-    "nx": "17.3.1",
+    "nx": "18.3.4",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
