--- a/.github/workflows/sanityDeploy.yml
+++ b/.github/workflows/sanityDeploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "apps/sanity/**"
+      - 'apps/sanity/**'
   workflow_dispatch:
 
 jobs:
@@ -16,10 +16,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
