--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,8 @@
     "@iconify-json/mdi": "1.1.66",
     "@sanity/client": "6.17.2",
     "@sanity/image-url": "1.0.2",
+    "@vercel/analytics": "1.2.2",
+    "@vercel/speed-insights": "1.0.10",
     "classnames": "2.5.1",
     "groq": "3.40.0",
     "unplugin-icons": "0.19.0"
