--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "rebaseWhen": "behind-base-branch",
+  "rebaseWhen": "conflicted",
   "schedule": ["before 5am"],
+  "postUpdateOptions": ["pnpmDedupe"],
   "packageRules": [
     { "labels": ["📦 deps", "🤖 bot"], "matchPackagePatterns": ["*"] },
     {
@@ -14,6 +15,13 @@
       "groupSlug": "all-minor-patch",
       "matchPackagePatterns": ["*"],
       "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
+      "description": "Don't bump engines field in package.json",
+      "matchPackageNames": ["node", "pnpm"],
+      "matchManagers": ["npm"],
+      "matchDepTypes": ["engines"],
+      "rangeStrategy": "auto"
     }
   ],
   "rangeStrategy": "pin",
