--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,7 @@
     "@binoy/eslint-config": "workspace:*",
     "@playwright/test": "1.45.0",
     "@portabletext/svelte": "2.1.11",
-    "@sveltejs/adapter-auto": "3.2.2",
+    "@sveltejs/adapter-vercel": "5.3.2",
     "@sveltejs/kit": "2.5.17",
     "@sveltejs/vite-plugin-svelte": "3.1.1",
     "@tailwindcss/typography": "0.5.13",
