--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,7 +33,7 @@
     "@portabletext/svelte": "2.1.11",
     "@sveltejs/adapter-vercel": "5.5.2",
     "@sveltejs/kit": "2.15.1",
-    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/typography": "0.5.15",
     "autoprefixer": "10.4.20",
     "eslint": "9.17.0",
@@ -41,7 +41,7 @@
     "prettier": "3.4.2",
     "prettier-plugin-svelte": "3.3.2",
     "prettier-plugin-tailwindcss": "0.6.9",
-    "svelte": "4.2.19",
+    "svelte": "5.16.1",
     "svelte-check": "4.1.1",
     "svelte-highlight": "7.8.2",
     "tailwindcss": "3.4.17",
