--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,12 +7,11 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {
     "@binoy/ui": "workspace:*",
