--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo run build",
     "check": "turbo run check",
     "dev": "turbo run dev",
+    "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write .",
     "sanity:deploy": "turbo run deploy --filter='./apps/sanity'",
