--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
     },
     "lint": {},
     "check": {},
+    "test": {},
     "sanity:typegen": {},
     "deploy": {
       "env": ["SANITY_AUTH_TOKEN"],
