--- a/.github/workflows/sanityDeploy.yml
+++ b/.github/workflows/sanityDeploy.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 20
+      - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
