--- a/apps/calculator-utils/package.json
+++ b/apps/calculator-utils/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@binoy/eslint-config": "workspace:*",
     "@iconify/json": "2.2.294",
-    "@sveltejs/adapter-auto": "3.3.1",
+    "@sveltejs/adapter-vercel": "5.5.2",
     "@sveltejs/kit": "2.15.2",
     "@sveltejs/vite-plugin-svelte": "4.0.4",
     "@testing-library/dom": "10.4.0",
