--- a/apps/calculator-utils/static/manifest.json
+++ b/apps/calculator-utils/static/manifest.json
@@ -38,7 +38,7 @@
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-384x384.png",
