--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,8 +33,8 @@
     "@sveltejs/adapter-vercel": "5.6.2",
     "@sveltejs/kit": "2.17.2",
     "@sveltejs/vite-plugin-svelte": "4.0.4",
+    "@tailwindcss/vite": "^4.0.6",
     "@tailwindcss/typography": "0.5.16",
-    "autoprefixer": "10.4.20",
     "eslint": "9.20.1",
     "highlight.js": "11.11.1",
     "prettier": "3.5.1",
@@ -43,7 +43,7 @@
     "svelte": "5.20.1",
     "svelte-check": "4.1.4",
     "svelte-highlight": "7.8.2",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
     "vite": "5.4.14",
