--- a/apps/calculator-utils/package.json
+++ b/apps/calculator-utils/package.json
@@ -19,23 +19,22 @@
     "@sveltejs/adapter-vercel": "5.6.2",
     "@sveltejs/kit": "2.17.2",
     "@sveltejs/vite-plugin-svelte": "4.0.4",
+    "@tailwindcss/vite": "4.0.6",
     "@testing-library/dom": "10.4.0",
     "@testing-library/svelte": "5.2.7",
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
-    "autoprefixer": "10.4.20",
     "eslint": "9.20.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-svelte": "2.46.1",
     "globals": "15.15.0",
     "jsdom": "26.0.0",
-    "postcss": "8.5.2",
     "prettier": "3.5.1",
     "prettier-plugin-svelte": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "svelte": "5.20.1",
     "svelte-check": "4.1.4",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.6",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.24.0",
