--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,5 +48,9 @@
     "typescript": "5.7.3",
     "vite": "6.1.1",
     "vitest": "3.0.7"
+  },
+  "packageManager": "pnpm@10.4.1",
+  "engines": {
+    "pnpm": ">=10"
   }
 }
