--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@binoy/eslint-config",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "main": "index.js",
-  "dependencies": {
+  "devDependencies": {
+    "@eslint/js": "9.21.0",
     "typescript-eslint": "8.25.0",
     "globals": "16.0.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-config-turbo": "2.4.2",
     "eslint-plugin-svelte": "2.46.1"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
