--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -8,8 +8,9 @@
     "@eslint/js": "9.21.0",
     "typescript-eslint": "8.25.0",
     "globals": "16.0.0",
+    "svelte-eslint-parser": "1.0.1",
     "eslint-config-prettier": "10.0.1",
-    "eslint-config-turbo": "2.4.2",
+    "eslint-config-turbo": "2.4.4",
     "eslint-plugin-svelte": "2.46.1"
   }
 }
